<resources>
    <string name="app_name">auth</string>

    //login
    <string name="welcome_login">Login to Win</string>
    <string name="login">Login</string>
    <string name="create_account">Create new Account</string>
    <string name="password">Password</string>
    <string name="phNumber">Phone Number</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="noAccount">Don\'t have an account?</string>

    //Signup
    <string name="welcome_signup">Signup To Win</string>
    <string name="username"> User Name</string>
    <string name="signup">Signup</string>
    <string name="otp">OTP code</string>
    <string name="send_code">Send Code</string>
    <string name= "send_code_again">Didn\'t received the OTP?</string>
    <string name="resend">Send Code Again</string>

</resources>